<resources>
    <string name="app_name">Email Stalk</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">signup</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="submit">submit</string>
    <string name="rightArrow">&#xf105;</string>
    <string name="plus">&#xf055;</string>
    <string name="home">Home</string>
    <string name="email_detail">Email Detail</string>
    <string name="up_arrow">&#xf106;</string>
    <string name="down_arrow">&#xf107;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delivery_time">Delivery time</string>
    <string name="preference_text">Tell us at what time you would like to receive our daily reports</string>
    <string name="save_preference">SAVE PREFERENCE</string>
    <string name="preference">Preferences</string>
    <string name="account">Accounts</string>
    <string name="how">How It Works</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="report">Report a bug</string>
    <string name="logout">Logout</string>
    <string-array name="deliveryArray">
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
    </string-array>
    <string name="report_text">We take product bugs very seriously and appreciate you taking the time to report them.If you believe you have found an error, please submit it below</string>
    <string name="what_happening">What"'"s happening</string>
    <string name="reuired_error">Required error message details</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="browser_text">Browser and Operating System</string>
    <string name="submit_bug">SUBMIT BUG REPORT</string>
    <string name="php">php echo $browser></string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="time_zone">Time Zone</string>
    <string name="preferred_lang">Preferred language</string>
    <string name="country">Country</string>
    <string-array name="timeZone">
        <item>Select TimeZone</item>
        <item>America/Cuiaba</item>
        <item>Asia/Kolkata (GMT+5:30)</item>
    </string-array>
    <string-array name="language">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="country">
        <item>Select Region</item>
        <item>Asia</item>
        <item>India</item>
    </string-array>
    <string name="save_setting">SAVE SETTINGS</string>
    <string name="setting">Settings</string>
    <string name="faq1">I Forgot My Password. How Do I Reset It?</string>
    <string name="faq2">How Do I Change My Account Info?</string>
    <string name="faq3">What are Tags?</string>
    <string name="faq4">I Want to Organize My Tags.How Do I Do It?</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout_text">Do you really want to logout this Application ?</string>
    <string name="close_text">Do you really want to close your account ?</string>
    <string name="secondary_email">Add Secondary Email</string>
    <string name="single_notification">Single Email Notification</string>
    <string name="multiple_notification">Multiple Email Notification</string>
    <string name="push_notification">Push Notification</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="enter_email">Enter Email</string>
    <string name="connectionFail">Connection Failed !</string>
    <string name="serverError">Server Error</string>
    <string name="android">android</string>
    <string name="please_wait">Please Wait...</string>
    <string name="authenticating">Authenticating...</string>
    <string name="notification">Notifications</string>
    <string name="network_error">Please Check your network connection</string>
    <string name="push_notification_header">Email notification enabled by default</string>
    <string name="push_notification_detail">Receive email alert straight in your inbox by default (it can be deactivated in each individual message).</string>
    <string name="daily_report_header">Daily report</string>
    <string name="daily_report_detail">Get analysis everyday on your email opens. See what strategies works best and get rid of the ones that don"'"t.</string>
    <string name="add_more">Add Email</string>
    <string name="no_email">No Email Found</string>
    <string name="notification_delete_text">Do you want delete the Notification ?</string>
    <string name="terms_and_condition">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry"'"s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="privacy_policy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry"'"s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="enter_password">Enter Password</string>
    <string name="tutorials">Tutorials</string>
    <string name="close_account">Close Account</string>
    <string name="remove_account">Remove Secondary Account</string>
    <string name="account_alert">Account updated successfully</string>
    <string name="preference_alert">Preferences saved successfully</string>
    <string name="network_alert">Please check your network connection</string>
    <string name="notification_alert">Notification changed successfully</string>
    <string name="close_alert">Account has been successfully removed</string>
    <string name="secondary_alert">Secondary email removed</string>
    <string name="password_alert">Password changed successfully</string>
    <string name="verify_email">Please verify your email</string>

    <string name="zendesk_url">https://emailstalk.zendesk.com</string>
    <string name="zendesk_appid">394e14010db2a3763f568557cd78455b9967ccf6180cc21b</string>
    <string name="zendesk_clientid">mobile_sdk_client_1774bd0a0870eaf93f83</string>

</resources>
