<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <CustomControl.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_text"
            android:textColor="@color/black_font"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/what_happening"
            android:textColor="@color/black_font"
            android:textSize="@dimen/heading_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:hint="@string/reuired_error"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/personal_information"
            android:textColor="@color/black_font"
            android:textSize="@dimen/heading_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:hint="@string/full_name"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/browser_text"
            android:textColor="@color/black_font"
            android:textSize="@dimen/heading_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:hint="@string/php"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:hint="@string/php"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.ButtonLatoRegular
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/submit_bug"
            android:textColor="@color/colorWhite"
            android:background="@drawable/green_button"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>