<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/first_name"
            android:textColor="@color/black_font"
            android:textSize="@dimen/heading_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_font"
            android:hint="James"
            android:textColorHint="@color/black_font"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/last_name"
            android:textColor="@color/black_font"
            android:textSize="@dimen/heading_text_size" />

        <CustomControl.EditTextRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_font"
            android:textColorHint="@color/black_font"
            android:hint="Bond"
            android:textSize="@dimen/detail_text_size" />

        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_text_size"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/black_font"
            android:text="@string/time_zone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerTimeZone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="8dp"
                android:background="@drawable/down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGrey"/>

        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_text_size"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/black_font"
            android:text="@string/preferred_lang" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="8dp"
                android:background="@drawable/down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGrey"/>
        <CustomControl.TextViewLatoBolt
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_text_size"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/black_font"
            android:text="@string/country" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerCountry"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="8dp"
                android:background="@drawable/down"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDarkGrey"/>

        <CustomControl.ButtonLatoRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorWhite"
            android:text="@string/save_setting"/>

    </LinearLayout>

</LinearLayout>