<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/tool" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:id="@+id/preferenceRecyclerView"/>

<LinearLayout
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/preferenceRecyclerView"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="35dp">

    <CustomControl.TextViewLatoBolt
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/heading_text_size"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textColor="@color/black_font"
        android:text="@string/delivery_time" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CustomControl.TextViewRegular
            android:id="@+id/textViewDailyReport"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:gravity="center|start"
            android:textSize="@dimen/heading_text_size"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/downArrow"
            android:layout_width="15dp"
            android:layout_height="8dp"
            android:background="@drawable/down"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDarkGrey"/>
    <CustomControl.TextViewRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_font"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/detail_text_size"
        android:text="@string/preference_text" />
    
    <CustomControl.ButtonLatoRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_button"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/buttonSavePreference"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginRight="25dp"
        android:textColor="@color/colorWhite"
        android:text="@string/save_preference"/>

</LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true" />
</RelativeLayout>